<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.usuario.sqlprueba.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/txt_login"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textSize="25dp"/>

        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/tip_correo"
            android:textAlignment="center"
            android:layout_margin="5dp"/>

        <EditText
            android:id="@+id/etContrasena"
            android:inputType="textPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/tip_contr"
            android:textAlignment="center"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:padding="5dp">

            <Button
                android:id="@+id/bIngresar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/txt_ing"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/bRegistrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/txt_reg"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
