<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.usuario.sqlprueba.UsuarioActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvUsuarioTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_usuario"
            android:layout_margin="1dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="20dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvTipoUsu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_tipo"
            android:layout_margin="1dp"
            android:textSize="15dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_estado"
            android:layout_margin="1dp"
            android:textSize="15dp"
            android:layout_weight="1.5"
            android:gravity="end"/>

        <Spinner
            android:id="@+id/spEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="1dp"></Spinner>

    </LinearLayout>

</LinearLayout>
